[package]
name = "libreader"
version = "0.1.0"
authors = ["ilammy <a.lozovsky@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["unicode"]
unicode = ["libunicode"]

[lib]
name = "reader"
path = "lib.rs"

[dependencies]
libunicode = { path = "../libunicode", version = "0.1.0", optional = true }
