[package]
name = "libreader"
version = "0.1.0"
authors = ["Sabre developers"]
license = "MIT/Apache-2.0"

[features]
default = ["unicode"]
unicode = ["libunicode"]

[dependencies]
liblocus = { path = "../liblocus", version = "0.1.0" }
libunicode = { path = "../libunicode", version = "0.1.0", optional = true }
